c - crash     b - bug fix    e - enhancement    f - new feature  n - note
3.0-alpha
  b - Resolved conflicts caused by the addition of procs support in the trunk.
      The prototype for set_nodes did not have a procs variable in its
      argument list.

  e - Patch to correctly log attempts to create a cpuset as debug messages.
      The function im_request() in src/resmom/mom_comm.c logs the message:
      pbs_mom: LOG_ERROR::im_request, about to create cpuset for job 55100.blah.
      as an error rather than a debug message (as used in src/resmom/start_exec.c).
      The fix is to replace:
        log_err(-1, id, log_buffer);
      with:
        log_ext(-1, id, log_buffer, LOG_INFO);

  f - Added code to support mulitple MOMs per node. Changed code to support
      a radix of sister nodes giving mom to mom job communication a hierarchical
      structure instead of the flat Mother Superior to everyone which is the
      historical way TORQUE has communicated with sisters in a job. 
      Replaced the simple binary tree used by the tinsert, tfind, tdelete
      et. al. utilities with an AVL balanced tree and replaced the previous
      functions with functions beginning with AVL_.
  e - Now saving serverdb as an xml file instead of a byte-dump, thus 
      allowing canned installations without qmgr scripts, as well as more
      portability.

2.5.0
  e - Changed qsub to allow for a -l nodes=x+procs=y syntax.
  b - Made a fix to qmgr.c in is_attr. When checking node names against 
      attribute keywords is_attr used strncmp and limited the length of the 
      compare to the length of the keyword. So node names like stateless
      were tagged as an error. (replaced strncmp with strcmp)
  e - Enabled TORQUE to be able to parse the -l procs=x node spec. Previously
      TORQUE simply recored the value of x for procs in Resources_List. It
      now takes that value and allocates x processors packed on any available 